--- a/_includes/post/edit.html
+++ b/_includes/post/edit.html
@@ -4,4 +4,4 @@
   {% assign path = page.path %}
 {% endif %}
 
-<a href="{{ site.github_repo_url }}edit/master/source/_posts/{{ path }}">edit</a>
+<a href="{{ site.github_repo_url }}edit/gh-pages/_posts/{{ path }}">edit</a>
