Improve mobile experience
- Word wrap code blocks
- Hide overflow to prevent horizontal scrolling
- Make blog post title font size smaller
- Hide the edit link and the comments count


Former-commit-id: de6ad4eafdbf1108573b78d7a6f83dd319cb7cea
Former-commit-id: c64a8b54a165acb4ee76bc6900694ff252ca0e9d
Former-commit-id: 323d3158245bb012f0ead9cf6405d31f88e664ae [formerly 7840ec9bc5e4b50886e9f909f35c8311fc9f8d31]
Former-commit-id: e5777ff584d6d880742869c296105626debbdf94

--- a/css/screen.css
+++ b/css/screen.css
@@ -562,8 +562,14 @@ ul li a { -webkit-transition: all .2s ease-in;-moz-transition:all .2s ease-in;-o
         float: none;
         width: 100%;
     }
-    .container .mid-col .mid-col-container { padding: 15px 15px }
+    .container .mid-col .mid-col-container { padding: 15px 15px; overflow: hidden; }
     #content article .meta { float: none }
+    #content article h1.title { font-weight: 700; font-size:2em; overflow: hidden; }
+    #content article .meta span { display: block; font-size: 0.9em; }
+    #content article .meta span.edit { display: none }
+    #content article .meta span.comments { display: none }
+    #content article h1.title { overflow: hidden; }
+    #content article pre code { font-size: 0.6em; word-wrap:break-word;}
 }
 #feedburner-count { position: absolute;top:0;right:0;clip:rect(4px, 85px, 15px, 4px) }
 span.comments a { text-transform: lowercase }
