Link contact directly to new issues page
This hopefully reduces confusion.

Former-commit-id: c9126e8a3e9ea28b0ad67ae0280a06c7088a31f2

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,7 +1,7 @@
 <ul class="main-navigation">
   <li><a href="/about/">about</a></li>
   <li><a href="/archive">archives</a></li>
-  <li><a href="https://github.com/Haacked/feedback">contact</a></li>
+  <li><a href="https://github.com/Haacked/feedback/issues/new">contact</a></li>
 </ul>
 
 {% if site.description %}
