Add C# code format CSS from manoli.net
Former-commit-id: 95d10a1ba7a73c25a4589d94d7bca379a6ba6f0f
Former-commit-id: f1677815b2db7f2a75b5f845df8f036e36f872bf
Former-commit-id: 833569ccc5ce475ef132905da63d5fa63e6e36e5 [formerly 6ed199a65b3f7b140476f6b890d2cd20f16c45ae]
Former-commit-id: 0ed11cbad0584c13c5b318b0f95f6d7f63328149

--- a/css/code.css
+++ b/css/code.css
@@ -1,3 +1,21 @@
+/* Styles for C# Code Format http://www.manoli.net/csharpformat/format.aspx */
+
+.csharpcode .rem { color: #008000; }
+.csharpcode .kwrd { color: #0000ff; }
+.csharpcode .str { color: #a31515; }
+.csharpcode .op { color: #0000c0; }
+.csharpcode .preproc { color: #cc6633; }
+.csharpcode .asp { background-color: #ffff00; }
+.csharpcode .html { color: #800000; }
+.csharpcode .attr { color: #ff0000; }
+.csharpcode .alt 
+{
+	background-color: #f4f4f4;
+	width: 100%;
+	margin: 0em;
+}
+.csharpcode .lnum { color: #606060; }
+
 /*
 
 Visual Studio-like style based on original C# coloring by Jason Diamond <jason@diamond.name>
@@ -96,3 +114,4 @@ pre .vhdl .literal { color: rgb(163, 21, 21); }
 pre .vhdl .attribute { color: #00B0E8; }
 
 pre .xml .attribute { color: rgb(255, 0, 0); }
+
