--- a/css/code.css
+++ b/css/code.css
@@ -1,13 +1,13 @@
 /* Styles for C# Code Format http://www.manoli.net/csharpformat/format.aspx */
 
-.csharpcode .rem { color: #008000; }
-.csharpcode .kwrd { color: #0000ff; }
-.csharpcode .str { color: #a31515; }
+.csharpcode .rem, .highlight .c1, .highlight .cs, .highlight .c, .highlight .cm, .highlight .nn { color: #008000; }
+.csharpcode .kwrd, .highlight .kt, .highlight .k, .highlight .kd { color: #0000ff; }
+.csharpcode .str, .highlight .s, .highlight .s1 { color: #a31515; }
 .csharpcode .op { color: #0000c0; }
 .csharpcode .preproc { color: #cc6633; }
 .csharpcode .asp { background-color: #ffff00; }
 .csharpcode .html { color: #800000; }
-.csharpcode .attr { color: #ff0000; }
+.csharpcode .attr, .highlight .na { color: #ff0000; }
 .csharpcode .alt 
 {
 	background-color: #f4f4f4;
@@ -36,83 +36,5 @@ pre code {
   word-wrap: break-word;
 }
 
-pre .comment,
-pre .annotation,
-pre .template_comment,
-pre .diff .header,
-pre .chunk,
-pre .apache .cbracket {
-  color: rgb(0, 128, 0);
-}
-
-pre .keyword,
-pre .id,
-pre .built_in,
-pre .smalltalk .class,
-pre .winutils,
-pre .bash .variable,
-pre .tex .command,
-pre .request,
-pre .status,
-pre .nginx .title,
-pre .xml .tag,
-pre .xml .tag .value {
-  color: rgb(0, 0, 255);
-}
-
-pre .string,
-pre .title,
-pre .parent,
-pre .tag .value,
-pre .rules .value,
-pre .rules .value .number,
-pre .ruby .symbol,
-pre .ruby .symbol .string,
-pre .aggregate,
-pre .template_tag,
-pre .django .variable,
-pre .addition,
-pre .flow,
-pre .stream,
-pre .apache .tag,
-pre .date,
-pre .tex .formula,
-pre .coffeescript .attribute {
-  color: #006080;
-}
-
-pre .ruby .string,
-pre .decorator,
-pre .filter .argument,
-pre .localvars,
-pre .array,
-pre .attr_selector,
-pre .pseudo,
-pre .pi,
-pre .doctype,
-pre .deletion,
-pre .envvar,
-pre .shebang,
-pre .preprocessor,
-pre .pragma,
-pre .userType,
-pre .apache .sqbracket,
-pre .nginx .built_in,
-pre .tex .special,
-pre .prompt {
-  color: rgb(43, 145, 175);
-}
-
-pre .phpdoc,
-pre .javadoc,
-pre .xmlDocTag {
-  color: rgb(128, 128, 128);
-}
-
-pre .vhdl .typename { font-weight: bold; }
-pre .vhdl .string { color: #666666; }
-pre .vhdl .literal { color: rgb(163, 21, 21); }
-pre .vhdl .attribute { color: #00B0E8; }
-
-pre .xml .attribute { color: rgb(255, 0, 0); }
-
+.highlight .m { color: #009999 } /* Literal Number */
+.highlight .o, .highlight .p, .highlight .p-indicator, .highlight .nv { color: #666666 } /* Operator */
