reframe the post

--- a/css/screen.css
+++ b/css/screen.css
@@ -591,3 +591,15 @@ a:hover { -webkit-transition: color 0.3s;-moz-transition:color 0.3s;-o-transitio
 }
 #page-navigation div { display: inline-block }
 #page-navigation div.next { float: right }
+
+dialog {
+ font-size: 1.2em;
+}
+dt {
+ text-transform: uppercase;
+ text-align: left;
+ margin-top: 1.6em;
+}
+dd {
+ margin-left: 7.2em;
+}
