Add contributors page

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,6 +2,7 @@
   <li><a href="/about/">about</a></li>
   <li><a href="/archive">archives</a></li>
   <li><a href="https://github.com/Haacked/feedback/issues/new">contact</a></li>
+  <li><a href="/contributors">contributors</a></li>
 </ul>
 
 {% if site.description %}
