--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <p>
-  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} Blog content licensed under the Creative Commons <a href="http://creativecommons.org/licenses/by/2.5/">CC BY 2.5</a> | [Blog theme license](http://sm.mit-license.org/) | <a href="/privacy">privacy</a> | <a href="/articles/blogtegrity">blogtegrity</a>
+  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} Blog content licensed under the Creative Commons <a href="http://creativecommons.org/licenses/by/2.5/">CC BY 2.5</a> | <a href="http://sm.mit-license.org/">Blog theme license</a> | <a href="/privacy">privacy</a> | <a href="/articles/blogtegrity">blogtegrity</a>
 </p>
 <img id="feedburner-count" src="http://feedproxy.google.com/~fc/haacked?bg=FFFFFF&amp;fg=999999&amp;anim=0" alt="Reader count" />
 
