Fix h3 text flowing into h2 text
As seen here: http://haacked.com/archive/2014/07/28/github-flow-aliases/ (search for GitHub Flow Aliases). Screenshot: http://cl.ly/image/0X2l1H2T2C2R

Also dropped the h3 font size a bit.

Former-commit-id: 2452b899e104979afb621598522a57e79b0d14c7
Former-commit-id: 685c5fad3ad4752b849e382359dee6a1cbb2e05d
Former-commit-id: 6adc79e860ff394db66ede38a3aaf8a83ccc226e [formerly 02c0f1ecbb2db9eb07b7b7169abb3365459143ec]
Former-commit-id: 32bee0e8ea9af0610ebe6ec9c345c358c18fef65

--- a/css/screen.css
+++ b/css/screen.css
@@ -348,6 +348,7 @@ article .entry-content table {
     border-collapse: collapse;
     margin-top: 10px;
 }
+article .entry-content h2+h3 { margin-top: 30px; font-size: 22px; }
 article .entry-content table td,
 article .entry-content table th {
     font-family: helvetica, arial, san-serif;
