--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,11 +26,11 @@
 	<!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 	<!--Fonts from Google"s Web font directory at http://google.com/webfonts -->
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,700,800' rel='stylesheet' type='text/css'>
-	<link href="/favicon.png" rel="shortcut icon">
+	<link href="/favicon.ico" rel="shortcut icon">
 	<link href="/css/screen.css" media="screen, projection" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="/css/code.css" type="text/css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script src="/js/slash.js" async></script>
-	
+
   	{% include google_analytics.html %}
 </head>
