YOLO! Use the post title if there's no page title.
Thanks to @NicoJuicy for the suggestion.

Former-commit-id: d2449b3af0dbe0a15b2fa63f3e83a0e82e65f97b
Former-commit-id: f4138fd04cb5508044b529287bf98b3d46a1236c
Former-commit-id: 23c9f5cc9b0e18a0fc28ca8611bc7b1f0d254b89 [formerly 510e5c871e133e49b403f750a7e8e88504387a9f]
Former-commit-id: 990ebb1ccbeabc3690423e3e61f505ca45dc461f

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,7 @@
 {% endif %}
 <head>
 	<meta charset="utf-8">
+	<title>{% if page.title %}{{ page.title }} - {% elsif post.title %}{{ post.title }} - {% endif %}{{ site.title }}</title>
 	<title>{% if page.title %}{{ page.title }} - {% endif %}{{ site.title }}</title>
 	<meta name="author" content="{{ site.author }}">
 
