--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,9 @@
 <p>
-  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} Blog content licensed under the Creative Commons <a href="http://creativecommons.org/licenses/by/2.5/">CC BY 2.5</a> | Site design based on the <a href="https://github.com/shashankmehta/greyshade">Greyshade theme</a> under the <a href="http://sm.mit-license.org/">MIT license</a> | <a href="/privacy">privacy</a> | <a href="/articles/blogtegrity">blogtegrity</a>
+  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} Blog content licensed under the Creative Commons <a href="http://creativecommons.org/licenses/by/2.5/">CC BY 2.5</a>
+  | Unless otherwise stated or granted, code samples licensed under the <a href="http://sm.mit-license.org/">MIT license</a>. 
+  | Site design based on the <a href="https://github.com/shashankmehta/greyshade">Greyshade theme</a> under the <a href="http://sm.mit-license.org/">MIT license</a>
+  | <a href="/privacy">privacy</a>
+  | <a href="/articles/blogtegrity">blogtegrity</a>
 </p>
 
 {% include disqus.html %}
