Add top margin for blockquote after H2
Not the most elegant fix, but who has the time to clean this up?!

Fixes haacked/feedback#131 as reported by @schlueter (thanks!)


Former-commit-id: b51c6aaeadf9599342f1854848ec2bec0f4149da
Former-commit-id: 930065b90208e15a48db1c818a8958b90ab01b70
Former-commit-id: da72bd0c6ed3c98e9edce74ee5b7f3e61dacaa98 [formerly 150ac81e44b7be530c272b9e8bb23e0c532f27f4]
Former-commit-id: 2b10d92877d000855569d4784c0624bb3b383e19

--- a/css/screen.css
+++ b/css/screen.css
@@ -520,6 +520,7 @@ ul li a { -webkit-transition: all .2s ease-in;-moz-transition:all .2s ease-in;-o
 #content article .entry-content h2::before { border-bottom: none }
 #content article .entry-content blockquote { border-left: 5px solid #4466c5;background:#F7F7F7 }
 #content article .entry-content blockquote p { margin-top: 0px }
+#content article .entry-content h2 + blockquote { margin-top: 30px; }
 #content article .entry-content table { line-height: 1.2em }
 #content article .entry-content table td { text-align: left }
 #content article .meta { color: #999;font-family:"Open Sans";font-weight:100;font-size:1.2em }
