Allow code elements to wrap
Former-commit-id: ae07533ded87dfcddbf31652d27cb6784644c211
Former-commit-id: 4fd23eb5f08361409ef741cf3b192d52a1aeb13b
Former-commit-id: f6b8af038b2a4114592faf99c4165e29ea84b327 [formerly 44f24de928b6b8f3d403f4bd99b86d838b70cff5]
Former-commit-id: 184393c08d7520acbffdf74b458d7ee5eb4c2a85

--- a/css/code.css
+++ b/css/code.css
@@ -33,7 +33,7 @@ pre code {
   margin: 10px 0 8px 0;
   padding: 5px 15px;
   overflow-x: auto;
-  word-wrap: break-word;
+  white-space: normal;
 }
 
 .highlight .m { color: #009999 } /* Literal Number */
