Remove unnecessary chanegs
Former-commit-id: 6b5a70320f7718899f0d774572fde0628f179458

--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -1,5 +1,5 @@
 {% if site.google_analytics_tracking_id %}
-	<script type="text/javascript">
+	<script>
 		var _gaq = _gaq || [];
 		_gaq.push(['_setAccount', '{{ site.google_analytics_tracking_id }}']);
 		_gaq.push(['_trackPageview']);
