--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -7,7 +7,7 @@
 	<div class="loading">Loading...</div>
 </div>
 <script src="{{ root_url }}/javascripts/twitter.js"></script>
-<script type="text/javascript">
+<script>
 	(function($){
 		$('#banner').getTwitterFeed('{{ site.twitter_user }}', {{ site.twitter_tweet_count }}, {{ site.twitter_show_replies }});
 	})(jQuery);
