--- a/_includes/twitter_sharing.html
+++ b/_includes/twitter_sharing.html
@@ -1,5 +1,5 @@
 {% if site.twitter_follow_button or site.twitter_tweet_button %}
-  <script type="text/javascript">
+  <script>
     (function(){
       var twitterWidgets = document.createElement('script');
       twitterWidgets.type = 'text/javascript';
