Try out Carbon ad network
Former-commit-id: 52e7475021ec3d02ddd0540176f72326ed43bded
Former-commit-id: f64c06231e416fc89869fcee851e1f5878bf8210
Former-commit-id: 75659699a0853e5b84c6f97a21a1ff66b2060ad5 [formerly ad499933619767aaaa18deb6a2a7cf2434daa6b2]
Former-commit-id: 7cce386fa219e78681776ef2c4783e77e467b587

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,10 @@
 
 <body>
 	<div class="container">
+		<script async src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=haackedcom" id="_carbonads_js"></script>
 		<div class="left-col">
 			<div class="intrude-less">
-				<header id="header" class="inner">{% include header.html %}</header>				
+				<header id="header" class="inner">{% include header.html %}</header>
 			</div>
 		</div>
 		<div class="mid-col">
@@ -19,9 +20,9 @@
 <!--  CodeProject AD  -->
 <script>
     function _dmBootstrap(file) {
-        var _dma = document.createElement('script'); 
+        var _dma = document.createElement('script');
         _dma.type = 'text/javascript';
-        _dma.async = true; 
+        _dma.async = true;
         _dma.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + file;
         (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(_dma);
     }
