Set the zindex properly

--- a/_scss/carbon.scss
+++ b/_scss/carbon.scss
@@ -1,8 +1,9 @@
 #carbonads {
   display: block;
   position: fixed;
-  bottom: 0;
-  right: 0;
+  z-index: 100;
+  bottom: 1rem;
+  right: 1rem;
   width: 140px;
   text-align: right;
 }
