Integrate Native CPC
The ad unit from BuySellAds.

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,7 @@
 	<link rel="stylesheet" href="/css/styles.css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 	<script src="/js/slash.js" async></script>
+	<script src="/js/native.js"></script>
 		{% seo %}
-  	{% include google_analytics.html %}
+		{% include google_analytics.html %}
 </head>
