--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,6 +25,8 @@ single: true
         </div>
 </div>
 
+{% include native.html %}
+
 {% if site.disqus_short_name and page.comments == true %}
 <section id="comment">
     <h1 class="title">Comments</h1>
