Fix navigation margin

--- a/_scss/screen.scss
+++ b/_scss/screen.scss
@@ -18,10 +18,10 @@ body {
     font-size: 13px;
     background: #2d3339;
 }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     body { margin: 0 20px }
 }
-@media screen and (max-width: 600px) { 
+@media screen and (max-width: 600px) {
     body { font-size: 13px }
 }
 h1 { font-size: 1.8em }
@@ -44,7 +44,7 @@ a {
     width: 1000px;
     margin: 0 auto;
 }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     .inner { width: 100% }
 }
 .pullquote-right:before,
@@ -70,7 +70,7 @@ a {
     border-bottom: 1px solid #ddd;
     line-height: 30px;
 }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     #header {
         height: auto;
         position: relative;
@@ -93,7 +93,7 @@ a {
     float: left;
     width: 100%;
 }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     #header h1 { float: none }
 }
 #header h1 a {
@@ -103,7 +103,7 @@ a {
     max-width: 210px;
     margin: 0;
 }
-@media screen and (max-width: 600px) { 
+@media screen and (max-width: 600px) {
     #header h1 a { margin: auto }
 }
 #header h2 {
@@ -116,14 +116,14 @@ a {
     float: left;
     margin-left: 30px;
 }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     #main-nav {
         float: none;
         margin-left: 0;
         margin-top: 15px;
     }
 }
-@media screen and (max-width: 600px) { 
+@media screen and (max-width: 600px) {
     #main-nav>ul { display: none }
 }
 #main-nav>ul>li {
@@ -135,7 +135,7 @@ a {
     zoom: 1;
     *display: inline;
 }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     #main-nav>ul>li {
         margin-left: 0;
         margin-right: 50px;
@@ -154,27 +154,27 @@ a {
     padding-left: 10px;
 }
 #main-nav>ul>li>a:only-child:after { content: "" }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     #main-nav>ul>li>a { padding: 18px 0 }
 }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     #main-nav>ul ul { top: 40px }
 }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     #sub-nav {
         position: absolute;
         top: 30px;
         right: 0;
     }
 }
-@media screen and (max-width: 600px) { 
+@media screen and (max-width: 600px) {
     #sub-nav { display: none }
 }
 #sub-nav .social {
     float: left;
     margin-right: 15px;
 }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     #sub-nav .social {
         float: none;
         margin-right: 0;
@@ -255,7 +255,7 @@ a {
     width: 100%;
     display: block;
 }
-@media screen and (max-width: 400px) { 
+@media screen and (max-width: 400px) {
     #pagenavi .center { display: none }
 }
 article {
@@ -264,10 +264,10 @@ article {
     padding: 30px 0;
     position: relative;
 }
-@media screen and (max-width: 800px) { 
+@media screen and (max-width: 800px) {
     article { padding-bottom: 15px }
 }
-@media screen and (max-width: 600px) { 
+@media screen and (max-width: 600px) {
     article { padding: 15px 0 }
 }
 article h1.title {
@@ -403,7 +403,7 @@ article .entry-content .video-container embed {
 }
 .post h1.title,
 .post .entry-content { margin-bottom: 0 }
-@media screen and (max-width: 800px) { 
+@media screen and (max-width: 800px) {
     .post h1.title,
     .post .entry-content { margin-left: 0 }
 }
@@ -432,7 +432,7 @@ article .entry-content .video-container embed {
     left: 0;
     margin-right: 5px;
 }
-@media screen and (max-width: 800px) { 
+@media screen and (max-width: 800px) {
     .meta .date,
     .meta .tags,
     .meta .comments,
@@ -540,10 +540,10 @@ ul li a { -webkit-transition: all .2s ease-in;-moz-transition:all .2s ease-in;-o
 .archives .title { font-size: 1.2em }
 .archives article .meta { line-height: 1.5em;margin-top:0 }
 .archives article .meta span::before { padding-right: 0 }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     body { margin: 0 0 }
 }
-@media screen and (max-width: 700px) { 
+@media screen and (max-width: 700px) {
     .container .credit-box { display: none }
     .left-col {
         position: relative;
@@ -588,6 +588,8 @@ a:hover { -webkit-transition: color 0.3s;-moz-transition:color 0.3s;-o-transitio
 .left-col a:hover { color: #4466c5 }
 #page-navigation {
     font-family: arial;
+    margin-top: 20px;
+    line-height: 1.5;
     width: 100%;
 }
 #page-navigation div { display: inline-block }
