Update Zone Key
Swap out demo with live zone key

--- a/_includes/native.html
+++ b/_includes/native.html
@@ -1,5 +1,5 @@
 <script>
-  _native.init("CKYIT2QJ", {
+  _native.init("CKYDEKQE", {
     targetClass: 'native-js',
     display: 'flex',
     visibleClass: 'native-show'
