Implement Jekyll Blog Comments
Following the instructions in https://github.com/damieng/jekyll-blog-comments
to set up haacked.com to use a jekyll+azure based comment system.


Former-commit-id: 881fa955e08dd988fd34c60537084016359a7e58
Former-commit-id: c2ce6abfc8520a32aefa590e1bf26785c9b0adfb
Former-commit-id: fa435ec22fef1907855a83204e9baa87f58d178b [formerly e05009db7744c8f726dac5bb48ccf53d0a868aac]
Former-commit-id: 3626fa66cd1fbdbb3843bc3b2fecbfa07789ee1a

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,10 @@
 	<link href="/favicon.ico" rel="shortcut icon">
 	<link rel="stylesheet" href="/css/styles.css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
+  <script src="/js/utils.js"></script>
 	<script src="/js/slash.js" async></script>
-		{% seo %}
-  	{% include google_analytics.html %}
+	<script src="/js/md5.min.js" async></script>
+	<script src="/js/comment-box.js" async></script>
+	{% seo %}
+	{% include google_analytics.html %}
 </head>
