--- a/_includes/post/comments_link.html
+++ b/_includes/post/comments_link.html
@@ -1,7 +1,3 @@
-{% if post.disqus_identifier %}
-  {% assign disqus_identifier = post.disqus_identifier %}
-{% else %}
-  {% assign disqus_identifier = page.disqus_identifier %}
+{% if post.comments or page.comments %}
+<span class="comments"><a href="{{ post.url }}#comments">comments</a></span>
 {% endif %}
-
-<span class="comments"><a href="{{ post.url }}#disqus_thread"{% if disqus_identifier %} data-disqus-identifier="{{ disqus_identifier }}"{% endif %}>comments</a></span>
