--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,9 +8,7 @@ layout: default
     {% endif %}
     <div class="entry-content">{{ content }}</div>
 </article>
-{% if site.disqus_short_name and page.comments == true %}
-<section id="comment">
-    <h1 class="title">Comments</h1>
-    <div id="disqus_thread" aria-live="polite">{% include post/disqus_thread.html %}</div>
-</section>
+
+{% if page.comments == true %}
+  {% include comments.html %}
 {% endif %}
