--- a/_scss/screen.scss
+++ b/_scss/screen.scss
@@ -18,10 +18,10 @@ body {
     font-size: 13px;
     background: #2d3339;
 }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     body { margin: 0 20px }
 }
-@media screen and (max-width: 600px) { 
+@media screen and (max-width: 600px) {
     body { font-size: 13px }
 }
 h1 { font-size: 1.8em }
@@ -44,7 +44,7 @@ a {
     width: 1000px;
     margin: 0 auto;
 }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     .inner { width: 100% }
 }
 .pullquote-right:before,
@@ -70,7 +70,7 @@ a {
     border-bottom: 1px solid #ddd;
     line-height: 30px;
 }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     #header {
         height: auto;
         position: relative;
@@ -93,7 +93,7 @@ a {
     float: left;
     width: 100%;
 }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     #header h1 { float: none }
 }
 #header h1 a {
@@ -103,7 +103,7 @@ a {
     max-width: 210px;
     margin: 0;
 }
-@media screen and (max-width: 600px) { 
+@media screen and (max-width: 600px) {
     #header h1 a { margin: auto }
 }
 #header h2 {
@@ -116,14 +116,14 @@ a {
     float: left;
     margin-left: 30px;
 }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     #main-nav {
         float: none;
         margin-left: 0;
         margin-top: 15px;
     }
 }
-@media screen and (max-width: 600px) { 
+@media screen and (max-width: 600px) {
     #main-nav>ul { display: none }
 }
 #main-nav>ul>li {
@@ -135,7 +135,7 @@ a {
     zoom: 1;
     *display: inline;
 }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     #main-nav>ul>li {
         margin-left: 0;
         margin-right: 50px;
@@ -154,27 +154,27 @@ a {
     padding-left: 10px;
 }
 #main-nav>ul>li>a:only-child:after { content: "" }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     #main-nav>ul>li>a { padding: 18px 0 }
 }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     #main-nav>ul ul { top: 40px }
 }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     #sub-nav {
         position: absolute;
         top: 30px;
         right: 0;
     }
 }
-@media screen and (max-width: 600px) { 
+@media screen and (max-width: 600px) {
     #sub-nav { display: none }
 }
 #sub-nav .social {
     float: left;
     margin-right: 15px;
 }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     #sub-nav .social {
         float: none;
         margin-right: 0;
@@ -255,7 +255,7 @@ a {
     width: 100%;
     display: block;
 }
-@media screen and (max-width: 400px) { 
+@media screen and (max-width: 400px) {
     #pagenavi .center { display: none }
 }
 article {
@@ -264,10 +264,10 @@ article {
     padding: 30px 0;
     position: relative;
 }
-@media screen and (max-width: 800px) { 
+@media screen and (max-width: 800px) {
     article { padding-bottom: 15px }
 }
-@media screen and (max-width: 600px) { 
+@media screen and (max-width: 600px) {
     article { padding: 15px 0 }
 }
 article h1.title {
@@ -396,14 +396,9 @@ article .entry-content .video-container embed {
     height: 100%;
     margin-top: 0;
 }
-.share {
-    padding: 15px 0;
-    border-top: 1px solid #fff;
-    border-bottom: 1px solid #ddd;
-}
 .post h1.title,
 .post .entry-content { margin-bottom: 0 }
-@media screen and (max-width: 800px) { 
+@media screen and (max-width: 800px) {
     .post h1.title,
     .post .entry-content { margin-left: 0 }
 }
@@ -432,7 +427,7 @@ article .entry-content .video-container embed {
     left: 0;
     margin-right: 5px;
 }
-@media screen and (max-width: 800px) { 
+@media screen and (max-width: 800px) {
     .meta .date,
     .meta .tags,
     .meta .comments,
@@ -508,7 +503,7 @@ ul li a { -webkit-transition: all .2s ease-in;-moz-transition:all .2s ease-in;-o
 .container .mid-col footer.inner { text-align: center;margin:0px 70px 0px 40px;width:auto }
 .container .mid-col .mid-col-container { padding: 0px 70px 0px 100px;max-width:700px }
 #content { width: 100% }
-#content article { border-top: none;padding:80px 0px }
+#content article { border-top: none; }
 #content article .title { margin-left: 0px;font-size:4em;font-weight:800;line-height:1em }
 #content article.single-post .title { text-align: center;text-decoration:underline }
 #content article .entry-content { margin-left: 0px;line-height:1.4em;font-size:1.5em }
@@ -540,10 +535,10 @@ ul li a { -webkit-transition: all .2s ease-in;-moz-transition:all .2s ease-in;-o
 .archives .title { font-size: 1.2em }
 .archives article .meta { line-height: 1.5em;margin-top:0 }
 .archives article .meta span::before { padding-right: 0 }
-@media screen and (max-width: 1040px) { 
+@media screen and (max-width: 1040px) {
     body { margin: 0 0 }
 }
-@media screen and (max-width: 700px) { 
+@media screen and (max-width: 700px) {
     .container .credit-box { display: none }
     .left-col {
         position: relative;
@@ -604,3 +599,5 @@ dt {
 dd {
  margin-left: 7.2em;
 }
+
+div.suggest-edit-message {padding: 4px 8px 20px 8px;}
