Clarify why identity is cleared out

--- a/_includes/comment-new.html
+++ b/_includes/comment-new.html
@@ -15,7 +15,7 @@
       <input type="hidden" name="avatar" id="avatarInput" />
       <input type="text" name="name" id="name" placeholder="Display Name" title="Name displayed with your comment" data-required="true" />
       <input type="text" name="identity" id="identity" placeholder="email/@twitter/github" data-required="true" value="" />
-      <span class="info-circle" title="Identity is used to generate an avatar image only. It is not submitted with the form."></span>
+      <span class="info-circle" title="Identity is used to generate an avatar image only. It is cleared out when you click submit and not sent to the server."></span>
       <button type="button" id="commentbutton">Leave response</button>
       <div id="remember-me">
         <input type="checkbox" name="remember" id="remember"><label for="remember">Remember me</label>
