Add comment count to archives etc.
Former-commit-id: b5700499c71f43c7df1653ee3a20a27192a83bc1
Former-commit-id: a60c53098ba26c6c74b442705c1b44b55b2b1549
Former-commit-id: 2bc85d7330c462a43565a5646b1eb37b17a3f01c [formerly ef767167dc7b4b1e64869b16b977aef24f363e5c]
Former-commit-id: fff438dcdb75539394cefb42546f626827d4cc8a

--- a/_includes/post/comments_link.html
+++ b/_includes/post/comments_link.html
@@ -1,3 +1,5 @@
 {% if post.comments or page.comments %}
-<span class="comments"><a href="{{ post.url }}#comments">comments</a></span>
+{% capture default_slug %}{{ post.slug | default: (page.title | slugify) }}{% endcapture %}
+{% capture slug %}{{ (post.slug | fallback: default_slug) | downcase }}{% endcapture %}
+<span class="comments"><a href="{{ post.url }}#comments">{{  site.data.comments[slug] | size }} comments</a></span>
 {% endif %}
