Implement plaintext editable div for Firefox
Wrote a simple implementation to enable plaintext contenteditable DIVs on FF. For more details, check out this repo: https://github.com/Haacked/simple-editable-div

Fixes #350


Former-commit-id: 170e771a2ec06701a1f8252c9ac22f8eb65b8cd0

--- a/_includes/comment-new.html
+++ b/_includes/comment-new.html
@@ -6,7 +6,7 @@
     <img src="/images/comments/unknown-avatar.png" data-fallbacksrc="/images/comments/unknown-avatar.png" data-role="user-avatar" alt="avatar" class="avatar" id="avatarPreview" />
     <div id="commenttext">
       <div id="commentstatus" class="status"></div>
-      <div contenteditable="PLAINTEXT-ONLY" tabindex="0" role="textbox" aria-multiline="true" data-role="editable" class="textarea" aria-label="Join the discussion..." id="comment-div"></div>
+      <div contenteditable="true" tabindex="0" role="textbox" aria-multiline="true" data-role="editable" class="textarea plaintext" aria-label="Join the discussion..." id="comment-div" data-target="message"></div>
       <input type="hidden" name="message" id="message" data-required="true" value="" />
     </div>
   </div>
