Comment the URL for the comment
Sometimes folks ask me to delete or edit their comment. It's kind of a pain to find it. At least now I can view source and find it.


Former-commit-id: 9dedf6ee3998cf525499856a4ac6e83c20b2b4d7

--- a/_includes/comment.html
+++ b/_includes/comment.html
@@ -1,3 +1,7 @@
+<!-- URL for comment on GitHub
+{{ site.github_repo_url }}blob/gh-pages/_data/comments/{{ slug }}/{{ comment.id }}.yml
+-->
+
 {% if comment.url %}
 <a href="{{ comment.url }}" rel="nofollow">
   <img alt="Avatar for {{ comment.name | xml_escape }}" src="{{comment.avatar}}" class="avatar" height="48" width="48">
