--- a/_scss/screen.scss
+++ b/_scss/screen.scss
@@ -615,6 +615,8 @@ input + .info-circle:after {
   margin-right: -15px;
 }
 
+$grey-color-light: #eee;
+
 .contributor-list {
   -moz-column-rule: 1px dotted $grey-color-light;
   -webkit-column-rule: 1px dotted $grey-color-light;
