Set a height for each list item

--- a/_scss/screen.scss
+++ b/_scss/screen.scss
@@ -629,6 +629,7 @@ $grey-color-light: #eee;
 
   li {
     display: inline-block;
+    height: 110px;
     margin-bottom: 10px;
     text-align: center;
     width: 100%;
