--- a/_scss/screen.scss
+++ b/_scss/screen.scss
@@ -616,12 +616,15 @@ input + .info-circle:after {
 }
 
 .contributor-list {
-  -moz-columns: 5 64px;
-  -webkit-columns: 5 64px;
-  columns: 5 64px;
   list-style-type: none;
   margin-top: 20px;
 
+  &::after {
+    content: '';
+    width: 100%;
+    display: inline-block;
+  }
+    
   li {
     display: inline-block;
     font-family: "Open Sans";
@@ -629,7 +632,7 @@ input + .info-circle:after {
     height: 110px;
     margin-bottom: 10px;
     text-align: center;
-    width: 100%;
+    width: 132px;
   
     img {
       -moz-border-radius: 50%;
