--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,19 +1,15 @@
-{% include head.html %}
+<!DOCTYPE html>
+<html lang="{{ page.lang | default: site.lang | default: 'en' }}">
+  {% include head.html %}
+  <body>
+    <header class="header" class="inner">{% include header.html %}</header>
+    <main class="page-content" aria-label="Content">
+      <div class="wrapper">
+        <script async type="text/javascript" src="//cdn.carbonads.com/carbon.js?serve=CK7DTK3L&placement=haackedcom" id="_carbonads_js"></script>
+        {{ content }}
+      </div>
+      {% include footer.html %}
+    </main>
+  </body>
 
-<body>
-	<div class="container">
-		<div class="left-col">
-			<div class="intrude-less">
-				<header id="header" class="inner">{% include header.html %}</header>
-			</div>
-		</div>
-		<div class="mid-col">
-			<div class="mid-col-container">
-				<script async src="//cdn.carbonads.com/carbon.js?zoneid=1673&serve=C6AILKT&placement=haackedcom" id="_carbonads_js"></script>
-				<div id="content" class="inner">{{ content }}</div>
-			</div>
-			<footer id="footer" class="inner">{% include footer.html %}</footer>
-		</div>
-	</div>
-</body>
 </html>
