--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,7 +14,7 @@ $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $sidebar-width: 350px;
 $on-mobile: 800px;
 $carbon-ad-width: 140px;
-$baseurl: '{{site.baseurl}}';
+$baseurl: '{{ site.baseurl }}';
 
 @import 'haacked-theme',
   "carbon";
@@ -58,4 +58,21 @@ h1.post-title a {
 
 .pagination {
   padding-bottom: 30px;
+}
+
+.page img.profile {
+  float: left;
+  margin: 0 30px 30px 0;
+  width: 260px;
+
+  @media screen and (max-width: $on-mobile) {
+    clear: both;
+    display: block;
+    float: none;
+    margin: 0 auto;
+ }
+
+ .post-content h2 {
+   clear: both;
+ }
 }
