--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  {% include_cached head.html %}
+  {% include head.html %}
   <body>
     <header class="header" class="inner">{% include_cached header.html %}</header>
     <main class="page-content" aria-label="Content">
